--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,11 @@
 
 <body>
   <h1>Hello, {{ user.username }}</h1>
+  {% for post in posts %}
+  <div>
+    <p>{{ post.author.username }} says: {{ post.body }}</p>
+  </div>
+  {% endfor %}
 </body>
 
 </html>
