Inherit from base template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,25 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  {% if title %}
-  <title>{{ title }} - Microblog</title>
-  {% else %}
-  <title>Welcome to Microblog!</title>
-  {% endif %}
-</head>
-
-<body>
-  <h1>Hello, {{ user.username }}</h1>
-  {% for post in posts %}
-  <div>
-    <p>{{ post.author.username }} says: {{ post.body }}</p>
-  </div>
-  {% endfor %}
-</body>
-
-</html>
+{% block content %}
+<h1>Hello, {{ user.username }}</h1>
+{% for post in posts %}
+<div>
+  <p>{{ post.author.username }} says: {{ post.body }}</p>
+</div>
+{% endfor %}
+{% endblock %}
