Login link in navigation bar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,9 @@
 
 <body>
   <div>
-    Microblog: <a href="/index">Home</a>
+    Microblog:
+    <a href="/index">Home</a>
+    <a href="/login">Login</a>
   </div>
   <hr>
   {% block content %}
