--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,16 @@
     <a href="/login">Login</a>
   </div>
   <hr>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  {% endwith %}
+
   {% block content %}
   {% endblock %}
 </body>
