Insert <br> tag in login template

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,14 +6,14 @@
   {{ form.hidden_tag() }}
   <p>
     {{ form.username.label }}<br>
-    {{ form.username(size=30) }}
+    {{ form.username(size=30) }}<br>
     {% for error in form.username.errors %}
     <span style="color: red;">{{ error }}</span>
     {% endfor %}
   </p>
   <p>
     {{ form.password.label }}<br>
-    {{ form.password(size=30) }}
+    {{ form.password(size=30) }}<br>
     {% for error in form.password.errors %}
     <span style="color: red;">{{ error }}</span>
     {% endfor %}
