--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -11,6 +11,11 @@
 </table>
 <hr>
 {% for post in posts %}
-<p>{{ post.author.username }} says: {{ post.body }}</p>
+<table>
+  <tr valign="top">
+    <td><img src="{{ post.author.avatar(36) }}"></td>
+    <td>{{ post.author.username }} says:<br>{{ post.body }}</td>
+  </tr>
+</table>
 {% endfor %}
 {% endblock %}
