--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Edit Profile</h1>
 <form action="" method="post">
-  {{ form.hidden_tag }}
+  {{ form.hidden_tag() }}
   <p>
     {{ form.username.label }}<br>
     {{ form.username(size=30) }}<br>
@@ -12,7 +12,7 @@
     {% endfor %}
   </p>
   <p>
-    {{ form.about.me.label }}<br>
+    {{ form.about_me.label }}<br>
     {{ form.about_me(cols=50, rows=4) }}<br>
     {% for error in form.about_me.errors %}
     <span style="color: red;">{{ error }}</span>
